...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.MovieJetpack.Activity"
    tools:context=".favorite.movie.FavoriteMovieFragment">

    <FrameLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:layout_marginBottom="200dp"
        android:visibility="gone"
        android:orientation="vertical">
...
            android:textSize="20sp"
            android:text="@string/nodata" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
