...
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:maxLines="2"
            android:layout_toEndOf="@+id/cv_item_poster"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="@string/movie_title"/>

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/poppins_medium"
...
